# carrot.w

./: README.md  conversationGUIfunctionCallEx.py  project2.py  pyproject.toml  test.py
data/: project_data_카카오톡채널.csv  project_data_카카오톡채널.txt
