[tool.poetry]
name = "carrot-w"
version = "0.1.0"
description = ""
authors = ["carrot.w <carrot.w@kakaocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.28"
pandas = "^2.1.3"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
